# CS839-PhysicsBasedModeling

./: README.md
3-DAnimations/: CMakeLists.txt
3-DAnimations/tests/: CMakeLists.txt
3-DAnimations/tests/assignment1/: CMakeLists.txt  README.md  main.cpp
3-DAnimations/tests/assignment1/Debug/: assignment1
3-DElasticity/: CMakeLists.txt  README.md
3-DElasticity/tests/: CMakeLists.txt
3-DElasticity/tests/assignment2/: AnimatedMesh.h  CMakeLists.txt  FiniteElementMesh.h  main.cpp
3-DElasticity/tests/assignment2/Debug/: assignment2
